Adding additional animations

--- a/src/main/resources/templates/newsletters.html
+++ b/src/main/resources/templates/newsletters.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" type="text/css" href="../static/resources/css/style.css" th:href="@{/resources/css/style.css}"/>
 
-    <link rel="stylesheet" type="text/css" href="../static/resources/css/loading.css" th:href="@{/resources/css/loading.css}"/>
+    <link rel="stylesheet" type="text/css" href="../static/resources/css/animation.css" th:href="@{/resources/css/animation.css}"/>
 
     <script type="text/javascript" src="../static/resources/js/list.min.js" th:src="@{/resources/js/list.min.js}"></script>
     <script type="text/javascript" src="../static/resources/js/list.fuzzysearch.min.js" th:src="@{/resources/js/list.fuzzysearch.min.js}"></script>
