--- a/src/main/resources/templates/localGroupDetails.html
+++ b/src/main/resources/templates/localGroupDetails.html
@@ -105,9 +105,20 @@
                           </div>
                       </div>
                       <div class="form-group row">
-                          <label for="add-localGroup-nabuGroup" class="col-sm-3 control-label">Link zur NABU Gruppe</label>
+                          <label for="nabuGroup" class="col-sm-3 control-label">Link zur NABU Gruppe</label>
                           <div class="col-sm-9">
-                              <input type="url" class="form-control" placeholder="Webseite" th:field="*{nabuGroup}" />
+                              <input type="url" id="nabuGroup" class="form-control" placeholder="Webseite" th:field="*{nabuGroup}" />
+                          </div>
+                      </div>
+                      <div class="form-group row">
+                          <label for="contactPersons" class="col-sm-3 control-label">Ansprechpersonen</label>
+                          <div class="col-sm-9">
+                              <select id="contactPersons" multiple="multiple" title="Ansprechpartner auswählen" class="selectpicker" data-live-search="true" data-selected-text-format="static" data-actions-box="true" th:field="*{contactPersons}" th:remove="all-but-first">
+                                  <option data-subtext="(* 31.02.1234)" value="1" th:each="member : ${members}" th:value="${member.id}" th:text="${member.name}" th:attr="'data-subtext'=|(* ${member.participant ? member.participantProfile.dateOfBirth != null ? {member.participantProfile.dateOfBirth} : 'unbekannt' : 'unbekannt'} )|">Maxi Musterfrau</option>
+                                  <option data-subtext="(* 01.01.1111)" value="2">Heinz Heimlich</option>
+                                  <option data-subtext="(* 12.11.1009)" value="3">Dieter Lustig</option>
+                                  <option data-subtext="(* 03.07.1999)" value="4">Klaus Klücklich</option>
+                              </select>
                           </div>
                       </div>
                   </form>
@@ -556,6 +567,13 @@
                                 <th class="col-sm-2"><span class="glyphicon glyphicon-home"></span> NABU-Gruppe:</th>
                                 <td class="col-sm-10">
                                     <a href="http://sachsen.nabu.de" target="_blank" th:href="${localGroup.nabuGroupLink}" th:text="${localGroup.nabuGroupLink}">http://sachsen.nabu.de</a>
+                                </td>
+                            </tr>
+                            <tr class="row" th:if="${localGroup.hasContactPersons()}">
+                                <th class="col-sm-2"><span class="glyphicon glyphicon-star"></span> Ansprechpartner:</th>
+                                <td class="col-sm-10">
+                                    <a href="personDetails.html" th:each="contact : ${contactPersons}" th:href="@{/persons/{id}(id=${contact.id})}" th:text="${contact.name} + ', '">Max Muster</a>
+                                    <a href="mailto:" class="label label-default pull-right" th:href="|mailto:${contactPersonsEmails}|">E-Mail senden</a>
                                 </td>
                             </tr>
                         </tbody>
