Adding a badge for the current activist count

--- a/src/main/resources/templates/localGroupDetails.html
+++ b/src/main/resources/templates/localGroupDetails.html
@@ -589,7 +589,7 @@
             <div class="col-md-8">
                 <div class="panel panel-default">
                     <header class="panel-heading panel-menu">
-                        <h2 class="panel-title">Aktive</h2>
+                        <h2 class="panel-title">Aktive <span class="badge" th:text="${localGroup.memberCount}">12</span></h2>
 
                         <div class="panel-menu-container">
                            <div class="form-inline">
