--- a/src/main/resources/templates/localGroupDetails.html
+++ b/src/main/resources/templates/localGroupDetails.html
@@ -119,6 +119,9 @@
                                   <option data-subtext="(* 12.11.1009)" value="3">Dieter Lustig</option>
                                   <option data-subtext="(* 03.07.1999)" value="4">Klaus Klücklich</option>
                               </select>
+                              <p class="help-block">
+                                  Ansprechpersonen müssen Mitglieder in der Ortsgruppe sein
+                              </p>
                           </div>
                       </div>
                   </form>
@@ -250,7 +253,7 @@
               <section class="modal-body">
                   <form id="edit-board" class="form-horizontal" method="post" th:object="${boardForm}" th:action="@{/localGroups/{id}/board(id=${localGroup.id})}">
                       <div class="form-group row">
-                          <label for="edit-board-chairman" class="control-label col-sm-3">Vorsitzender:</label>
+                          <label for="edit-board-chairman" class="control-label col-sm-3">Vorsitz:</label>
                           <div class="col-sm-9">
                               <select id="edit-board-chairman" class="selectpicker" data-live-search="true" required="required" th:remove="all-but-first" th:field="*{chairmanId}">
                                   <option value="-1" th:each="member : ${members}" th:value="${member.id}" th:text="${member.name}">Maxi Musterfrau</option>
@@ -332,7 +335,7 @@
                           </div>
                       </div>
                       <div class="form-group row">
-                          <label for="add-project-personInCharge" class="control-label col-sm-3">Verantwortlicher</label>
+                          <label for="add-project-personInCharge" class="control-label col-sm-3">Verantwortliche(r)</label>
                           <div class="col-sm-9">
                               <select id="add-project-personInCharge" class="selectpicker" data-live-search="true" required="required" th:remove="all-but-first" th:field="*{personInCharge}">
                                   <option value="-1" th:each="member : ${members}" th:value="${member.id}" th:text="${member.name}">Maxi Musterfrau</option>
@@ -655,7 +658,7 @@
                     </header>
                     <ul class="list-group">
                         <li class="list-group-item">
-                            <span class="item-title">Vorsitzende(r):</span>
+                            <span class="item-title">Vorsitz:</span>
                             <a href="personDetails.html" th:if="${chairman}" th:href="|mailto: ${chairman.email}|" th:text="${chairman.name}">Maxi Musterfrau</a>
                             <span th:unless="${chairman}">---</span>
                         </li>
